# Ubuntu-resourcemonitor

./: CMakeLists.txt  gui.py
src/: main.cpp
